--- a/package.json
+++ b/package.json
@@ -29,10 +29,6 @@
   },
   "author": "",
   "license": "Unlicense",
-  "bugs": {
-    "url": "https://github.com/screepers/screeps-typescript-starter/issues"
-  },
-  "homepage": "https://github.com/screepers/screeps-typescript-starter#readme",
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@rollup/plugin-commonjs": "^29.0.0",
@@ -60,6 +56,7 @@
     "typescript-eslint": "^8.50.1"
   },
   "dependencies": {
+    "lodash-es": "^4.17.22",
     "source-map": "~0.7.6"
   }
 }
